--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,7 +117,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #4acaa8 !important;
+			color: #ca4a6e !important;
 		}
 
 	strong, b {
@@ -1785,7 +1785,7 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #4acaa8;
+		color: #ca4a6e;
 		font-size: 3.5em;
 	}
 
@@ -1848,7 +1848,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4acaa8;
+			border-color: #ca4a6e;
 		}
 
 	select {
@@ -1953,7 +1953,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #4acaa8;
+			border-color: #ca4a6e;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2388,6 +2388,12 @@ input, select, textarea {
 			width: 48%;
 		}
 
+		ul.feature-icons li img{
+			padding-right: 10px;
+		}
+
+
+
 			ul.feature-icons li:before {
 				-moz-osx-font-smoothing: grayscale;
 				-webkit-font-smoothing: antialiased;
@@ -2402,7 +2408,7 @@ input, select, textarea {
 			}
 
 			ul.feature-icons li:before {
-				background: #4acaa8;
+				background: #ca4a6e;
 				border-radius: 100%;
 				color: #ffffff;
 				display: block;
@@ -2618,7 +2624,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #4acaa8;
+			background-color: #ca4a6e;
 			color: #ffffff !important;
 		}
 
@@ -2626,14 +2632,14 @@ input, select, textarea {
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #5ed0b1;
+				background-color: #ca4a6e;
 			}
 
 			input[type="submit"].primary:active,
 			input[type="reset"].primary:active,
 			input[type="button"].primary:active,
 			.button.primary:active {
-				background-color: #39c29d;
+				background-color: #ca4a6e;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2700,7 +2706,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
+		background: #ca4a6e;
 		color: #d2f2e9;
 		height: 100%;
 		overflow-y: auto;
@@ -2789,7 +2795,7 @@ input, select, textarea {
 			}
 
 				#header > nav ul li {
-					border-top: solid 2px #5ccfb1;
+					border-top: solid 2px #ca4a6e;
 					display: block;
 					padding: 0;
 				}
@@ -2808,7 +2814,7 @@ input, select, textarea {
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #4acaa8 !important;
+							color: #ca4a6e !important;
 						}
 
 					#header > nav ul li:first-child {
@@ -2906,6 +2912,15 @@ input, select, textarea {
 				padding: 4em 0 2em 0;
 			}
 
+	}
+
+	.container a{
+		padding-right: 20px;
+		/* font-size: 50px; */
+	}
+
+	.sites{
+		font-size: 50px;
 	}
 
 /* Large */
@@ -3076,7 +3091,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #4acaa8;
+						background: #ca4a6e;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
